prod: added shared navbar

--- a/displacement.html
+++ b/displacement.html
@@ -19,8 +19,6 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="MathFlare" />
     <meta name="twitter:description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
-    <!-- OAuth -->
-    <meta name="google-signin-client_id" content="574643928295-tftr9maiaoejhtngs28jhdga6v3eueah.apps.googleusercontent.com">
     <!-- STYLES -->
     <link href="Content/bootstrap.css" rel="stylesheet" />
     <link href="Styles/Footer.css" rel="stylesheet" />
@@ -31,8 +29,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="icon" href="Assets/favicon.ico">
-    <!-- SCRIPTS -->
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
     <!-- GOOGLE ANALYTICS -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7W2S8VV31F"></script>
     <script>
@@ -76,13 +72,8 @@
     <!-- SCRIPTS START -->
     <script src="Scripts/jquery-3.0.0.js"></script>
     <script src="Scripts/bootstrap.js"></script>
-    <script src="dist/SignIn.js"></script>
-    <script src="dist/SignOut.js"></script>
-    <script src="dist/OnSignOut.js"></script>
+    <script src="dist/navbar.js"></script>
     <script src="dist/displacement.js"></script>
-    <script>
-        $("#nav-container").load("public/components/navbar.html");
-    </script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
 </body>
