--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="dead-center">
-        <h1 class="text-white fs-1"><img src="Assets/icon.png" class=" user-select-none logo" style="height: 1em; transform: rotate(180deg);" alt="logo"> MathFlare</span></h1>
+        <h1 class="text-white fs-1"><img src="Assets/icon.png" class=" user-select-none logo" style="height: 1em; transform: rotate(180deg);" alt="logo"> MathFlare</h1>
         <h3 class="text-danger fs-3">the go-to site for geometry and algebra</h3>
         <div class="d-inline-flex">
             <a href="https://github.com/mathflare" target="_blank" rel="noopener" class="btn btn-outline-light m-1"><i class="bi bi-github"></i> GitHub</a>
