--- a/equations.html
+++ b/equations.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <!-- MAIL -->
     <meta name="yandex-verification" content="f86171133514f762" />
@@ -9,18 +10,22 @@
     <title>MathFlare - 1st Degree Equations</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="MathFlare">
-    <meta name="keywords" content="liquidgeometry,liquid geometry,liquid-geometry,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle, mathflare, math-flare, math flare">
-    <meta name="description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+    <meta name="keywords"
+        content="liquidgeometry,liquid geometry,liquid-geometry,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle, mathflare, math-flare, math flare">
+    <meta name="description"
+        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <meta name="author" content="MathFlare LLC." />
     <meta name="og:url" content="https://www.mathflare.tk" />
     <meta name="og:title" content="MathFlare" />
-    <meta name="og:description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+    <meta name="og:description"
+        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <meta name="og:image" content="Assets/logo.png" />
     <meta name="og:locale" content="en_US" />
     <meta name="og:locale" content="website" />
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="MathFlare" />
-    <meta name="twitter:description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+    <meta name="twitter:description"
+        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <!-- STYLES -->
     <link href="Content/bootstrap.css" rel="stylesheet" />
     <link href="Styles/Footer.css" rel="stylesheet" />
@@ -29,7 +34,9 @@
     <link href="Styles/Site.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link rel="icon" href="Assets/favicon.ico">
     <!-- GOOGLE ANALYTICS -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7W2S8VV31F"></script>
@@ -40,6 +47,7 @@
         gtag('config', 'G-7W2S8VV31F');
     </script>
 </head>
+
 <body>
     <!-- NAVBAR START -->
     <div id="nav-container"></div>
@@ -49,18 +57,18 @@
         <hr class="bg-danger" style="width: 60%;" />
         <!-- X + Y = Z START -->
         <form autocomplete="off">
-        <h4 class="text-white">X &#43; Y &#61; Z</h4>
-        <div class="center-form">
-            <input type="number" id="y" placeholder="Y" class="form-control mb-0" step="0.01" />
-        </div>
-        <br>
-        <div class="center-form">
-            <input type="number" id="z" placeholder="Z" class="form-control mb-0" step="0.01" />
-        </div>
-        <br>
-        <div class="center-form">
-            <input type="submit" id="button" class="btn btn-success btn-lg equation" value="Solve for X">
-        </div>
+            <h4 class="text-white">X &#43; Y &#61; Z</h4>
+            <div class="center-form">
+                <input type="number" id="y" placeholder="Y" class="form-control mb-0" step="0.01" />
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="number" id="z" placeholder="Z" class="form-control mb-0" step="0.01" />
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="submit" id="button" class="btn btn-success btn-lg equation" value="Solve for X">
+            </div>
         </form>
         <br />
         <div style="max-height: 1em;">
@@ -68,24 +76,25 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=solve+first+degree+equations" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+            <a href="https://www.google.com/search?q=solve+first+degree+equations" target="_blank" rel="noopener"
+                class="btn btn-outline-light">Find information on the web</a>
         </div>
         <!-- X + Y = Z END -->
         <!-- X - Y = Z START -->
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
-        <h4 class="text-white">X &#8722; Y &#61; Z</h4>
-        <div class="center-form">
-            <input type="number" id="y2" placeholder="Y" class="form-control mb-0" step="0.01" />
-        </div>
-        <br>
-        <div class="center-form">
-            <input type="number" id="z2" placeholder="Z" class="form-control mb-0" step="0.01" />
-        </div>
-        <br>
-        <div class="center-form">
-            <input type="submit" id="button2" class="btn btn-success btn-lg equation" value="Solve for X">
-        </div>
+            <h4 class="text-white">X &#8722; Y &#61; Z</h4>
+            <div class="center-form">
+                <input type="number" id="y2" placeholder="Y" class="form-control mb-0" step="0.01" />
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="number" id="z2" placeholder="Z" class="form-control mb-0" step="0.01" />
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="submit" id="button2" class="btn btn-success btn-lg equation" value="Solve for X">
+            </div>
         </form>
         <br />
         <div style="max-height: 1em;">
@@ -93,24 +102,25 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=solve+first+degree+equations" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+            <a href="https://www.google.com/search?q=solve+first+degree+equations" target="_blank" rel="noopener"
+                class="btn btn-outline-light">Find information on the web</a>
         </div>
         <!-- X - Y = Z END -->
         <!-- YX = Z START -->
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
-        <h4 class="text-white">Y &#215; X &#61; Z</h4>
-        <div class="center-form">
-            <input type="number" id="y3" placeholder="Y" class="form-control mb-0" step="0.01" />
-        </div>
-        <br>
-        <div class="center-form">
-            <input type="number" id="z3" placeholder="Z" class="form-control mb-0" step="0.01" />
-        </div>
-        <br>
-        <div class="center-form">
-            <input type="submit" id="button3" class="btn btn-success btn-lg equation" value="Solve for X">
-        </div>
+            <h4 class="text-white">Y &#215; X &#61; Z</h4>
+            <div class="center-form">
+                <input type="number" id="y3" placeholder="Y" class="form-control mb-0" step="0.01" />
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="number" id="z3" placeholder="Z" class="form-control mb-0" step="0.01" />
+            </div>
+            <br>
+            <div class="center-form">
+                <input type="submit" id="button3" class="btn btn-success btn-lg equation" value="Solve for X">
+            </div>
         </form>
         <br />
         <div style="max-height: 1em;">
@@ -118,7 +128,8 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=solve+first+degree+equations" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+            <a href="https://www.google.com/search?q=solve+first+degree+equations" target="_blank" rel="noopener"
+                class="btn btn-outline-light">Find information on the web</a>
         </div>
         <!-- YX = Z END  -->
     </div>
@@ -128,19 +139,27 @@
     <script src="dist/navbar.js"></script>
     <script src="dist/equations-first-deg.js"></script>
     <script>
-        var myStorage = window.localStorage, equation;
-        $(".equation").click(function (e) { 
-            e.preventDefault();
-            if(!myStorage.getItem("equation")){
-                myStorage.setItem('equation', 1);
-            } else {
-                equation = myStorage.getItem("equation");
-                equation = parseFloat(equation) + parseFloat(1);
-                myStorage.setItem('equation',equation );
+        let storage = window.localStorage, equation;
+        if (typeof (Storage) !== 'undefined') {
+            const ele = document.querySelectorAll('.equation');
+            for (let i = 0; i < ele.length; i++) {
+                ele[i].addEventListener('click', (event) => {
+                    event.preventDefault();
+                    if (!storage.getItem("equation")) {
+                        storage.setItem('equation', 1);
+                    } else {
+                        equation = storage.getItem("equation");
+                        equation = parseFloat(equation) + parseFloat(1);
+                        storage.setItem('equation', equation);
+                    }
+                });
             }
-        });
+        } else {
+            console.error('your browser does not support local storage');
+        }
     </script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
 </body>
+
 </html>
