--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             }
         });
         } else {
-            console.error('no local storage support detected')
+            console.error('your browser does not support local storage');
         }
         var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
         var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {  
