--- a/equations-second.html
+++ b/equations-second.html
@@ -45,7 +45,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Second Degree Equations</h1>
+        <h1 class="text-white">Quadratic Equations</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <!-- ax^2=c START -->
         <form autocomplete="off">
