--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -52,7 +52,7 @@
     <!-- NAVBAR END -->
     <!-- BACK TO TOP BUTTON -->
     <button class="btn btn-danger position-fixed" id="btn-back-to-top"
-        style="display: none; bottom: 20px; left: 20px; border-radius: 50%; z-index: 99999;" data-bs-toggle="tooltip"
+        style="display: none; bottom: 20px; left: 20px; border-radius: 100%; z-index: 99999;" data-bs-toggle="tooltip"
         data-bs-placement="right" title="Back to Top"><i class="bi bi-arrow-up"></i></button>
     <h1 class="title text-center mt-5">MathFlare Cheat Sheet</h1>
     <div class="row m-0">
@@ -69,6 +69,7 @@
                         class="bi bi-arrow-return-right"></i> Negative</a>
                 <a href="#powoftenpos" class="list-group-item list-group-item-dark list-group-item-action"><i
                         class="bi bi-arrow-return-right"></i> Positive</a>
+                <a href="#identities" class="list-group-item list-group-item-dark list-group-item-action">Popular Identities</a>
             </div>
         </div>
         <div class="col-md-9 mt-5 text-center">
@@ -389,6 +390,47 @@
                         <tr>
                             <td>10<sup>20</sup></td>
                             <td>100,000,000,000,000,000,000</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
+            <section id="identities">
+                <h3>Popular Identities</h3>
+                <table class="table table-bordered text-white w-100" style="cursor: crosshair;">
+                    <thead class="bg-primary head">
+                        <tr>
+                            <th>Folded</th>
+                            <th>Unfolded</th>
+                        </tr>
+                    </thead>
+                    <tbody class="formulas-body">
+                        <tr>
+                            <td>(a + b)<sup>2</sup></td>
+                            <td>a<sup>2</sup> + 2ab + b<sup>2</sup></td>
+                        </tr>
+                        <tr>
+                            <td>(a - b)<sup>2</sup></td>
+                            <td>a<sup>2</sup> - 2ab + b<sup>2</sup></td>
+                        </tr>
+                        <tr>
+                            <td>(a + b)<sup>3</sup></td>
+                            <td>a<sup>3</sup> + 3a<sup>2</sup>b + 3ab<sup>2</sup> + b<sup>3</sup></td>
+                        </tr>
+                        <tr>
+                            <td>(a - b)<sup>3</sup></td>
+                            <td>a<sup>3</sup> - 3a<sup>2</sup>b + 3ab<sup>2</sup> - b<sup>3</sup></td>
+                        </tr>
+                        <tr>
+                            <td>a<sup>2</sup> - b<sup>2</sup></td>
+                            <td>(a + b)(a - b)</td>
+                        </tr>
+                        <tr>
+                            <td>a<sup>3</sup> + b<sup>3</sup></td>
+                            <td>(a + b)(a<sup>2</sup> - ab + b<sup>2</sup>)</td>
+                        </tr>
+                        <tr>
+                            <td>a<sup>3</sup> - b<sup>3</sup></td>
+                            <td>(a + b)(a<sup>2</sup> + ab + b<sup>2</sup>)</td>
                         </tr>
                     </tbody>
                 </table>
