fix: identities in the cheat sheet

--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -399,8 +399,8 @@
                 <table class="table table-bordered text-white w-100" style="cursor: crosshair;">
                     <thead class="bg-primary head">
                         <tr>
-                            <th>Folded</th>
-                            <th>Unfolded</th>
+                            <th>Simplified</th>
+                            <th>Expanded</th>
                         </tr>
                     </thead>
                     <tbody class="formulas-body">
@@ -430,7 +430,7 @@
                         </tr>
                         <tr>
                             <td>a<sup>3</sup> - b<sup>3</sup></td>
-                            <td>(a + b)(a<sup>2</sup> + ab + b<sup>2</sup>)</td>
+                            <td>(a - b)(a<sup>2</sup> + ab + b<sup>2</sup>)</td>
                         </tr>
                     </tbody>
                 </table>
