prod: added distance between two points calc

--- a/pointsdistance.html
+++ b/pointsdistance.html
@@ -51,7 +51,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Slope</h1>
+        <h1 class="text-white">Distance between two points</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
             <h3>First Point</h3>
@@ -73,7 +73,7 @@
             </div>
             <br />
             <div class="center-form">
-                <input type="submit" id="slopecalc" class="btn btn-success btn-lg" value="Calculate">
+                <input type="submit" id="distcalc" class="btn btn-success btn-lg" value="Calculate">
             </div>
         </form>
         <br>
@@ -82,7 +82,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=calculate+slope" target="_blank" rel="noopener"
+            <a href="https://www.google.com/search?q=calculate+distance+between+two+points" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
     </div>
@@ -90,7 +90,7 @@
     <script src="Scripts/jquery-3.0.0.js"></script>
     <script src="Scripts/bootstrap.js"></script>
     <script src="dist/navbar.js"></script>
-    <script src="dist/slope.js"></script>
+    <script src="dist/pointsdist.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
 </body>
