legal: added copyright notice

--- a/carboncombustions.html
+++ b/carboncombustions.html
@@ -78,7 +78,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=calculate+square+root" target="_blank" rel="noopener"
+            <a href="https://www.google.com/search?q=calculate+perfect+carbon+combustion" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
     </div>
